Add order shipping tracking feature
Bổ sung chức năng theo dõi trạng thái vận chuyển cho đơn hàng.

- Thêm enum ShippingStatus để chuẩn hóa trạng thái vận chuyển
- Hỗ trợ các trạng thái Chờ lấy hàng, Đang giao, Giao thành công, Giao thất bại và Đã hủy vận chuyển
- Cập nhật Order model để hiển thị label, CSS class và trạng thái tracking cho JSP
- Cập nhật OrderDAO để xử lý shipping_status, shipped_at và delivered_at
- Cập nhật AdminOrderDAO để load đầy đủ thông tin vận chuyển và ghi lịch sử tracking
- Cập nhật AdminOrderServlet để admin có thể thay đổi trạng thái vận chuyển
- Bổ sung form cập nhật trạng thái vận chuyển trong trang chi tiết đơn hàng admin
- Bổ sung form cập nhật thông tin vận chuyển gồm đơn vị giao hàng, mã vận đơn, phương thức và phí ship
- Hiển thị timeline tracking trong trang chi tiết đơn hàng của khách hàng
- Hiển thị trạng thái vận chuyển, mã vận đơn và tracking mini trong danh sách đơn hàng
- Sửa lỗi JSP do HTML comment nằm trong c:choose ở order_list.jsp
- Sửa lỗi format tổng tiền không dùng order.totalVnd * 1000